--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
 }
 
 /* Header */
@@ -71,4 +72,58 @@
 
 .header .header-input input::placeholder {
   color: var(--texto);
+}
+
+/* posts */
+.main-bg {
+  background: #f3f5f7;
+  display: flex;
+  justify-content: center;
+  padding: 50px 0;
+}
+
+.main {
+  width: 900px;
+}
+
+.main .main-posts {
+  display: grid;
+  gap: 50px;
+}
+
+.main-posts li {
+  background: var(--branco);
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.main .main-posts .header-post {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.main .main-posts .header-post img {
+  cursor: pointer;
+}
+
+.main-posts .header-post span {
+  font-weight: 400;
+  color: var(--texto);
+  font-size: 1rem;
+  font-family: "Lexend Deca", sans-serif;
+}
+
+.main-posts h2 {
+  color: var(--titulo);
+  font-family: "Lexend Deca", sans-serif;
+  font-size: 1.625rem;
+  font-weight: 400;
+}
+
+.main-posts p {
+  color: var(--texto);
+  font-family: "Lexend Deca", sans-serif;
+  font-size: 1.125rem;
+  font-weight: 400;
 }
